--- a/src/Components/FrequentlyAskedQuestions/frequently-asked-questions.css
+++ b/src/Components/FrequentlyAskedQuestions/frequently-asked-questions.css
@@ -1,8 +1,8 @@
 .faq-grid {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: 0 520px auto;
-
+    grid-template-rows: 10% 520px auto;
+    height: 100%;
     width: 100%;
     background: rgba(166, 221, 224, .14);
 }
